examples/test/testpolicy3277.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3277
  namespace: namespace489
spec:
  podSelector:
    matchLabels:
      key17: value5
      key23: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value38
          key34: value8
      podSelector:
        matchLabels:
          key12: value25
          key25: value34
          key18: value35
